--- a/package.json
+++ b/package.json
@@ -3,30 +3,12 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
+		"dev": "concurrently -p {time} npm:start",
 		"start": "react-scripts start",
 		"build": "react-scripts build"
 	},
-	"dependencies": {
-		"@coreui/chartjs": "^3.0.0",
-		"@coreui/coreui": "^4.1.0",
-		"@coreui/icons": "^2.1.0",
-		"@coreui/icons-react": "^2.0.1",
-		"@coreui/react": "^4.1.2",
-		"@coreui/react-chartjs": "^2.0.3",
-		"@coreui/utils": "^1.3.1",
-		"@testing-library/jest-dom": "^5.16.2",
-		"@testing-library/react": "^12.1.2",
-		"@testing-library/user-event": "^13.5.0",
-		"bootstrap": "^5.1.3",
-		"dagre": "^0.8.5",
-		"react": "^17.0.2",
-		"react-bootstrap": "^2.1.2",
-		"react-dom": "^17.0.2",
-		"react-flow-renderer": "^9.7.4",
-		"react-router-dom": "^6.2.1",
-		"react-scripts": "^5.0.0",
-		"simplebar-react": "^2.3.6",
-		"web-vitals": "^2.1.4"
+	"config": {
+		"react_project_version": "1.0"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -46,7 +28,31 @@
 			"last 1 safari version"
 		]
 	},
+	"dependencies": {
+		"@coreui/chartjs": "^3.0.0",
+		"@coreui/coreui": "^4.1.0",
+		"@coreui/icons": "^2.1.0",
+		"@coreui/icons-react": "^2.0.1",
+		"@coreui/react": "^4.1.2",
+		"@coreui/react-chartjs": "^2.0.3",
+		"@coreui/utils": "^1.3.1",
+		"@testing-library/jest-dom": "^5.16.2",
+		"@testing-library/react": "^12.1.2",
+		"@testing-library/user-event": "^13.5.0",
+		"bootstrap": "^5.1.3",
+		"dagre": "^0.8.5",
+		"react": "^17.0.2",
+		"react-bootstrap": "^2.1.2",
+		"react-dom": "^17.0.2",
+		"react-flow-renderer": "^9.7.4",
+		"react-router-dom": "^5.3.0",
+		"react-scripts": "^5.0.0",
+		"react-shadow-scroll": "^2.1.0",
+		"simplebar-react": "^2.3.6",
+		"web-vitals": "^2.1.4"
+	},
 	"devDependencies": {
+		"concurrently": "^7.0.0",
 		"sass": "^1.49.7"
 	}
 }
