--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@testing-library/user-event": "^13.5.0",
 		"bootstrap": "^5.1.3",
 		"dagre": "^0.8.5",
+		"jquery": "^3.6.0",
 		"react": "^17.0.2",
 		"react-bootstrap": "^2.1.2",
 		"react-dom": "^17.0.2",
